# QNM_Project_Fresh

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: _fno_qnm_fno_zerilli_l2_v2_GT_000_M0.878.yaml  _fno_qnm_fno_zerilli_l2_v2_GT_001_M1.009.yaml  _fno_qnm_fno_zerilli_l2_v2_GT_001_M1.009_shift20.yaml  _fno_qnm_fno_zerilli_l2_v2_GT_002_M1.161.yaml  _fno_qnm_fno_zerilli_l2_v2_GT_002_M1.161_shift20.yaml  _fno_qnm_fno_zerilli_l2_v2_GT_003_M1.153.yaml  _fno_qnm_fno_zerilli_l2_v2_pred_000_M0.878.yaml  _fno_qnm_fno_zerilli_l2_v2_pred_001_M1.009.yaml  _fno_qnm_fno_zerilli_l2_v2_pred_001_M1.009_shift20.yaml  _fno_qnm_fno_zerilli_l2_v2_pred_002_M1.161.yaml  _fno_qnm_fno_zerilli_l2_v2_pred_002_M1.161_shift20.yaml  _fno_qnm_fno_zerilli_l2_v2_pred_003_M1.153.yaml  _patel_single_eval.yaml  fno_zerilli_l2.yaml  fno_zerilli_l2_v2.yaml  fno_zerilli_l2_v2_cpu.yaml  fno_zerilli_l2_v3.yaml  fno_zerilli_l2_v4.yaml  fno_zerilli_l2_v5_qnmhead.yaml  fno_zerilli_l2_v5c_qnmhead.yaml  hybrid_sw_dataset.yaml  hybrid_sw_dataset_t100.yaml  hybrid_sw_drp7_dataset.yaml  hybrid_sw_drp7_k2_h64.yaml  hybrid_sw_drp7_k4.yaml  hybrid_sw_gate_derisk.yaml  hybrid_sw_gate_s1em3.yaml  hybrid_sw_gate_s1em3_t100.yaml  hybrid_sw_gate_s1em5.yaml  hybrid_sw_gradch_derisk.yaml  hybrid_sw_gradch_h64_derisk.yaml  hybrid_sw_h64_derisk.yaml  hybrid_sw_modes16.yaml  hybrid_sw_modes32.yaml  hybrid_sw_modes48.yaml  hybrid_sw_obsloss_derisk.yaml  hybrid_sw_obsloss_full.yaml  hybrid_sw_obsloss_w2.yaml  hybrid_sw_obsloss_w5.yaml  hybrid_sw_physics_k4.yaml  (+26 more)
kerr/: .gitignore  README.md  requirements.txt
(+430 files in other folders)
